--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Lista de tarefas</h1>
-        <input type="text" id="tarefa" placeholder="Digite a sua busca">
+        <input type="text" id="tarefa" placeholder="Digite a sua tarefa">
         <span><i class="fas fa-plus-circle" id="btn"></i></span>
     </header>
 
