--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/9.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="estilo.css">
 </head>
 
-    
+
 <body>
     <header>
         <h1>Lista de tarefas</h1>
@@ -16,11 +17,16 @@
     </header>
 
     <ul id="lista">
-        <li><i class="fas fa-check-circle check"></i><span>Fazer a atividade de Programação WEB</span><i class="fa-solid fa-trash-can close"></i></li>
-        <li><i class="fas fa-check-circle check"></i><span>Estudar o material complementar</span><i class="fa-solid fa-trash-can close"></i></li>
+        <li><i class="fas fa-check-circle check"></i><span>Fazer a atividade de Programação WEB</span><i
+                class="fa-solid fa-trash-can close"></i></li>
+        <li><i class="fas fa-check-circle check"></i><span>Estudar o material complementar</span><i
+                class="fa-solid fa-trash-can close"></i></li>
 
-        <li><i class="fas fa-check-circle check"></i><span>Assistir aos videos</span><i class="fa-solid fa-trash-can close"></i></li>
+        <li><i class="fas fa-check-circle check"></i><span>Assistir aos videos</span><i
+                class="fa-solid fa-trash-can close"></i></li>
     </ul>
 
+    <script src="script.js"></script>
 </body>
+
 </html>
